local-yaml/rbd-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbd-nginx
spec:
  nodeSelector:
    runtype: test
  containers:
    - image: nginx:1.14.2
      imagePullPolicy: IfNotPresent
      name: rbd-nginx
      volumeMounts:
      - name: rbdpd
        mountPath: /mnt/rbd
  volumes:
    - name: rbdpd
      rbd:
        monitors:
        - '192.168.2.131:6789'
        - '192.168.2.132:6789'
        - '192.168.2.133:6789'
        pool: rbd-test
        image: test-image
        fsType: ext4
        readOnly: false
        user: admin
        keyring: /etc/ceph/keyring
