local-yaml/test2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: lapis-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: nginx:1.14.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: test
