local-yaml/redis-standalone-service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    name: redis-standalone
  name: redis-standalone
  namespace: lapis-dev
spec:
  type: NodePort
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
    nodePort: 31379
  selector:
    name: redis-standalone
