local-yaml/lapis-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lapis-ui-ingress
  namespace: lapis-dev
  annotations:
    kubernets.io/ingress.class: "nginx"
spec:
  rules:
    - host: lapis.laisontech.com
      http:
        paths:
          - path: /
            backend:
              serviceName: lapis-ui-svc
              servicePort: 80
